--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,43 +5,20 @@ networks:
     external: true
 
 services:
-  # Consul Agent untuk service discovery di gateway
-  consul:
-    image: consul:1.14
-    container_name: consul
-    command:
-      - agent
-      - -dev
-      - -client=0.0.0.0
-      - -bind=0.0.0.0
-    networks:
-      - app-network-microservice
-    ports:
-      - "8500:8500"
-
-  # Traefik sebagai API Gateway menggunakan Consul Catalog Provider
   traefik:
     image: traefik:v2.10
     container_name: traefik
     restart: unless-stopped
-    depends_on:
-      - consul
     command:
       - --api.insecure=true
       - --entryPoints.web.address=:80
-      - --providers.docker=false
-      - --providers.docker.swarmMode=false
-      - --providers.consulcatalog.endpoint.address=consul:8500
-      - --providers.consulcatalog.refreshInterval=15s
-      - --log.level=INFO
+      - --providers.file.filename=/etc/traefik/dynamic.yaml
+      - --providers.file.watch=true
+      - --log.level=DEBUG
     ports:
-      - "90:80"     # HTTP entrypoint
-      - "8100:8080" # Dashboard insecure
+      - "90:80"
+      - "8100:8080"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./dynamic.yaml:/etc/traefik/dynamic.yaml
     networks:
       - app-network-microservice
-    labels:
-      # Middleware rate limiting
-      - "traefik.http.middlewares.ratelimit.rateLimit.average=5"
-      - "traefik.http.middlewares.ratelimit.rateLimit.burst=10"
